--- a/landing-style.css
+++ b/landing-style.css
@@ -1,42 +1,103 @@
 .grid-container {
     display: grid;
+    grid-template-columns:  1fr 1fr 1fr;
+    grid-template-rows: 1r 1fr 1fr 1fr;
+    grid-template-areas: 
+    ". header ."
+    ". list ."
+    ". photos ."
+    ". footer ."
+    ;
 }
 
+
 body {
-    grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows: 2fr 5fr 3fr 2fr;
-    grid-template-areas: 
-    "header header header"
-    "main main main"
-    "list list list"
-    "photos photos photos"
-    "footer footer footer"
-    ;
+  background-image:url(./images/elevatebackground1.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 100% 400px;
+  background-attachment: fixed;
+  font-family: 'Oswald', sans-serif;
+  letter-spacing: 2px;
+  font-size: 15px;
 }
 
 .logo {
     display: block;
-    width: 500px;
+    width: 400px;
     height: auto;
 }
 
+li {
+    color: black;
+    background-color: whitesmoke;
+    margin: 10px 40px 5px 60px;
+    padding: 2px 1px 2px 7px;
+}
+
+ul {
+    list-style: none;
+}
+
+button {
+margin-left: 100px;
+margin-bottom: 50px;
+background-color: #6D9891;
+border: none;
+font-family: 'Oswald', sans-serif;
+font-size: 15px;
+letter-spacing: 3px;
+color: white;
+}
+
+.links {
+    text-align: center;
+}
+
+.blackandwhite {
+    margin: 5px auto;
+    text-align: center;
+}
 
 .top-container {
-    grid-area: header
+    grid-area: header;
+    /* background-color: tomato; */
+    background-color: white;
+    color: #76575D;
 }
 
- .middle-container {
-     grid-area: main
-}
+
+ /* .middle-container {
+     grid-area: main;
+} */
 
 .section-one {
     grid-area: list;
+    /* background-color: yellow; */
 }
 
 .section-two {
     grid-area: photos;
+    background-color: #E1C1A5;
+    /* background-color: turquoise; */
 }
 
 .bottom-container {
     grid-area: footer;
+    background-color: #AFAC9B;
+    text-align: center;
+}
+
+/*trying out float columns*/
+.image-container {
+    display: flex;
+    align-content: center;
+}
+.column {
+    flex: 33.33%;
+    padding: 10px;
+}
+
+.border {
+    border: 1px solid black;
 }
