--- a/landing-style.css
+++ b/landing-style.css
@@ -1,46 +1,57 @@
 .grid-container {
     display: grid;
     grid-template-columns:  1fr 1fr 1fr;
-    grid-template-rows: 1r 1fr 1fr 1fr;
+    grid-template-rows: 2fr 3fr 2fr .5fr;
     grid-template-areas: 
-    ". header ."
-    ". list ."
-    ". photos ."
-    ". footer ."
+    "header header header"
+    " list list list"
+    "photos photos photos"
+    "footer footer footer"
     ;
 }
 
-
 body {
-  background-image:url(./images/elevatebackground1.jpg);
-  background-position: center center;
-  background-repeat: no-repeat;
-  background-size: 100% 400px;
-  background-attachment: fixed;
   font-family: 'Oswald', sans-serif;
   letter-spacing: 2px;
   font-size: 15px;
 }
 
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    letter-spacing: 3px;
+  }
+
 .logo {
-    display: block;
-    width: 400px;
-    height: auto;
+    grid-area: logo; 
+    align-self: center;
+    margin-bottom: 10px;
+}
+
+.logo img{
+width: 65%;
 }
 
 li {
     color: black;
     background-color: whitesmoke;
-    margin: 10px 40px 5px 60px;
-    padding: 2px 1px 2px 7px;
+    margin-left: 50%;
+    margin-right: 20%;
+    margin-bottom: 10px;
+    padding: 2px 10px 2px 7px;
 }
 
 ul {
     list-style: none;
+    margin-top: 5%;
 }
 
 button {
-margin-left: 100px;
+margin-left: 52%;
 margin-bottom: 50px;
 background-color: #6D9891;
 border: none;
@@ -51,51 +62,72 @@ color: white;
 }
 
 .links {
+    grid-area: links;
     text-align: center;
 }
+
+a {
+    color: #76575D;
+    text-decoration: none;
+}
+
+a:hover {
+   color: #6D9891;
+  }
 
 .blackandwhite {
     margin: 5px auto;
     text-align: center;
 }
 
-.top-container {
+.header {
+    /* border: 5px solid red; */
     grid-area: header;
-    /* background-color: tomato; */
     background-color: white;
     color: #76575D;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-
- /* .middle-container {
-     grid-area: main;
-} */
 
 .section-one {
+    /* border: 5px solid yellow; */
     grid-area: list;
-    /* background-color: yellow; */
+    background-image: url("./images/elevatebackground1.jpg");
+    background-size: cover; 
+    background-repeat: no-repeat;
 }
 
+/* .section-one img {
+background-size: cover; 
+width: 100%;
+} */
+
 .section-two {
+    /* border: 5px solid green; */
     grid-area: photos;
-    background-color: #E1C1A5;
-    /* background-color: turquoise; */
+    /* background-color: #E1C1A5; */
 }
 
 .bottom-container {
+    /* border: 5px solid purple; */
     grid-area: footer;
     background-color: #AFAC9B;
     text-align: center;
+    padding-bottom: 10px;
 }
 
-/*trying out float columns*/
 .image-container {
     display: flex;
     align-content: center;
 }
+
 .column {
     flex: 33.33%;
     padding: 10px;
+    text-align: center;
 }
 
 .border {
