--- a/about/about-style.css
+++ b/about/about-style.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 2fr 2fr 3fr .5fr;
+    grid-template-rows: .5fr 1fr 2fr .5fr;
     grid-template-areas: 
     "header header header"
     "image image image"
@@ -32,7 +32,7 @@ body {
   }
   
   .logo img{
-  width: 65%;
+    width: 65%;
   }
   
   ul {
@@ -61,6 +61,7 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin-top: 0px;
 }
 
 .image {
