--- a/about/about-style.css
+++ b/about/about-style.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: .5fr 1fr 2fr .5fr;
+    grid-template-rows: .5fr 1r 2fr .5fr;
     grid-template-areas: 
     "header header header"
     "image image image"
@@ -70,6 +70,10 @@ body {
     justify-content: center;
     padding-top: 20px;
     padding-bottom: 20px;
+    position: relative;
+    text-align: center;
+    color: white;
+    margin-top: 20px;
 }
 
 .about {
@@ -77,7 +81,7 @@ body {
     text-align: center;
     padding-left: 20%;
     padding-right: 20%;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
 }
 
 footer {
@@ -87,3 +91,13 @@ footer {
     padding-bottom: 10px;
 }
 
+.centered {
+    font-size: 40px;
+    color: white; 
+    font-weight: bolder;
+    letter-spacing: 20px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
