--- a/contact/contact-style.css
+++ b/contact/contact-style.css
@@ -1,7 +1,7 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 3fr .5fr; 
+    grid-template-rows: 1fr 2fr .25fr; 
     grid-template-areas: 
     "header header header"
     "contact contact contact"
@@ -13,6 +13,7 @@ body {
     font-family: 'Oswald', sans-serif;
     letter-spacing: 2px;
     font-size: 15px;
+    text-align: center;
   }
   
   nav {
@@ -61,12 +62,13 @@ a:hover {
 
 .contact-form {
     grid-area: contact;
-    background-color: hotpink;
 }
 
 footer {
     grid-area: footer;
-    background-color: orange; 
+    background-color: #AFAC9B;
+    text-align: center;
+    padding-bottom: 10px;
 }
 
 body {
@@ -85,4 +87,37 @@ body {
       letter-spacing: 3px;
     }
   
+    .submit {
+      align-content: center;
+      background-color: #6D9891;
+      border: none;
+      font-family: 'Oswald', sans-serif;
+      font-size: 25px;
+      letter-spacing: 3px;
+      color: white;
+      width: 20%;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      margin-top: 3%;
+      margin-bottom: 3%;
+      }  
     
+      input[type=text], select, textarea {
+        width: 50%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        align-content: center;
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+        font-family: 'Oswald', sans-serif;
+        letter-spacing: 2px;
+        font-size: 15px;
+      }
+
+      h1 {
+        font-weight: bolder;
+      }
+
+  
