--- a/about/about-style.css
+++ b/about/about-style.css
@@ -101,3 +101,8 @@ footer {
     left: 50%;
     transform: translate(-50%, -50%);
   }
+
+  @media (max-width: 600px) {
+    nav {
+      display: none;
+    }
