--- a/contact/contact-style.css
+++ b/contact/contact-style.css
@@ -120,4 +120,28 @@ body {
         font-weight: bolder;
       }
 
-  
+
+     @media (max-width: 600px) {
+
+      .grid-container {
+        display: grid;
+        grid-template-columns: 1fr ;
+        grid-template-rows: 1fr 2fr .25fr; 
+        grid-template-areas: 
+        "header"
+        "contact"
+        "footer"
+    }
+
+      .logo img{
+        width: 90%;
+        }
+
+        input[type=text], select, .submit, textarea {
+          width: 80%;
+      }
+
+      nav {
+        margin-bottom: 2px;
+      }
+    }
