--- a/contact/contact-style.css
+++ b/contact/contact-style.css
@@ -103,7 +103,7 @@ body {
       }  
     
       input[type=text], select, textarea {
-        width: 50%;
+        width: 60%;
         padding: 12px 20px;
         margin: 8px 0;
         display: inline-block;
@@ -120,6 +120,14 @@ body {
         font-weight: bolder;
       }
 
+    @media (max-width: 900px) {
+
+      input[type=text], select, .submit, textarea {
+        width: 80%;
+    }
+
+    }
+
 
      @media (max-width: 600px) {
 
@@ -134,7 +142,7 @@ body {
     }
 
       .logo img{
-        width: 90%;
+        width: 100%;
         }
 
         input[type=text], select, .submit, textarea {
@@ -144,4 +152,5 @@ body {
       nav {
         margin-bottom: 2px;
       }
+
     }
