--- a/about/about-style.css
+++ b/about/about-style.css
@@ -131,6 +131,10 @@ footer {
         ;
     }
 
+    .logo img{
+        width: 100%;
+        }
+
     .centered {
         font-size: 20px;
         letter-spacing: 10px;
